--- a/about.qmd
+++ b/about.qmd
@@ -1,9 +1,35 @@
 ---
 title: "About"
+about:
+  template: trestles
+  image: profile.jpg
+  links:
+    - text: LinkedIn
+      href: https://www.linkedin.com/in/am%C3%A9lie-lehuen-5262bb143/
+    - text: Twitter
+      href: https://twitter.com/PennyOakLh
+    - text: GitHub
+      href: https://github.com/am-lh
+    - text: ResearchGate
+      href: https://www.researchgate.net/profile/Amelie-Lehuen
+    - text: Email
+      href: mailto:amelie.lehuen@unicaen.fr
+    - text: Orcid
+      href: https://orcid.org/my-orcid?orcid=0000-0002-3150-6878
 ---
 
-About this site
+Finley Malloc is the Chief Data Scientist at Wengo Analytics. When not innovating on data platforms, Finley enjoys spending  time unicycling and playing with her pet iguana.
 
-```{r}
-1 + 1
-```
+## Education
+
+University of California, San Diego | San Diego, CA
+PhD in Mathematics | Sept 2011 - June 2015
+
+Macalester College | St. Paul MA
+B.A in Economics | Sept 2007 - June 2011
+
+## Experience
+
+Wengo Analytics | Head Data Scientist | April 2018 - present
+
+GeoScynce | Chief Analyst | Spet 2012 - April 2018
