--- a/about.qmd
+++ b/about.qmd
@@ -18,18 +18,36 @@ about:
       href: https://orcid.org/my-orcid?orcid=0000-0002-3150-6878
 ---
 
-Finley Malloc is the Chief Data Scientist at Wengo Analytics. When not innovating on data platforms, Finley enjoys spending  time unicycling and playing with her pet iguana.
+Methodical and rigorous with analytical and decisional abilities, reliable and self-driven, seek and find team agreement thanks to leadership. Chemical project manager during 14 years, dedicated now to the natural heritage protection.
 
 ## Education
 
-University of California, San Diego | San Diego, CA
-PhD in Mathematics | Sept 2011 - June 2015
+**2019-2020** **\|** MSc Ocean Sciences, Coastal Living Resources Exploitation -- Caen University
 
-Macalester College | St. Paul MA
-B.A in Economics | Sept 2007 - June 2011
+**2018-19** **\|** BSc Professions of environmental protection & management Ecological restoration & sustainable development - Caen University of Technology
+
+-   Natural habitats rehabilitation: Marine ecosystems management, Impact study, Ecological restoration, GIS, Bio / Phyto-remediation, Agroecology, Soil Remediation, Air Pollution
+
+-   Habitats analysis: Biodiversity, Hydrogeology, Botany, Habitats interactions
+
+-   Sustainable Development and Environmental Management: Environmental Law, Ecodesign, Waste Management
+
+-   Tutored project: Primary production analysis of microphytobenthos on the Orne estuary foreshore and spectral data acquired by GIS.
+
+**2004** **\|** Engineer degree -- Rouen National Institute of Applied Sciences (INSA) Fine Chemistry and Engineering Department -- specialism in Materials and Polymers
 
 ## Experience
 
-Wengo Analytics | Head Data Scientist | April 2018 - present
+**2020 (ONGOING)** -- PHD -- UMR BOREA -- Caen
 
-GeoScynce | Chief Analyst | Spet 2012 - April 2018
+Marine Ecosystem Engineers Long-Term Evolution ModelING in resPOnse to climate change and sediment Transport in Seine Estuary.
+
+Supervisor : Francis Orvain
+
+**2020 (9 MONTHS)** -- RESEARCH ENGINEER -- INTERNSHIP AND FIXED-TERM CONTRACT -- UFR BOREA -- Caen
+
+Prediction of the distribution of macrozoobenthic species in the Seine estuary in response to hydro-morpho-sedimentary changes: first applications on the population of cockles, Cerastoderma edule. Definition of optimal ecological niches by quantile regression.
+
+**2019 (6 MONTHS)** -- BENTHIC TECHNICIAN -- INTERNSHIP -- GEMEL-Normandie -- Luc sur Mer
+
+Evaluation of a stock of bivalves and associated fauna following a scientific reserve creation on the west coast of Cotentin.
