--- a/about.qmd
+++ b/about.qmd
@@ -7,16 +7,19 @@ about:
   links:
     - text: LinkedIn
       href: https://www.linkedin.com/in/am%C3%A9lie-lehuen-5262bb143/
-    - text: Twitter
-      href: https://twitter.com/PennyOakLh
+      icon: linkedin
     - text: GitHub
       href: https://github.com/am-lh
+      icon: github
     - text: ResearchGate
       href: https://www.researchgate.net/profile/Amelie-Lehuen
     - text: Email
       href: mailto:amelie.lehuen@unicaen.fr
     - text: Orcid
       href: https://orcid.org/my-orcid?orcid=0000-0002-3150-6878
+    - text: Twitter
+      href: https://twitter.com/PennyOakLh
+      icon: twitter
 ---
 
 Methodical and rigorous with analytical and decisional abilities, reliable and self-driven, seek and find team agreement thanks to leadership. Chemical project manager during 14 years, dedicated now to the natural heritage protection.
@@ -28,6 +31,8 @@ Methodical and rigorous with analytical and decisional abilities, reliable and s
 **2018-19** **\|** BSc Professions of environmental protection & management Ecological restoration & sustainable development - Caen University of Technology
 
 **2004** **\|** Engineer degree -- Rouen National Institute of Applied Sciences (INSA) Fine Chemistry and Engineering Department -- specialism in Materials and Polymers
+
+\-\--
 
 ## Experience
 
