--- a/about.qmd
+++ b/about.qmd
@@ -19,19 +19,7 @@ about:
 
 Methodical and rigorous with analytical and decisional abilities, reliable and self-driven, seek and find team agreement thanks to leadership. Chemical project manager during 14 years, dedicated now to the natural heritage protection.
 
-## Complete Resume
-
-[Download PDF](Manuscripts/calendrier-2022-semestriel-vierge.pdf)
-
-## Education
-
-**2019-20** **\|** MSc Ocean Sciences, Coastal Living Resources Exploitation -- Caen University
-
-**2018-19** **\|** BSc Professions of environmental protection & management Ecological restoration & sustainable development - Caen University of Technology
-
-**2004** **\|** Engineer degree -- Rouen National Institute of Applied Sciences (INSA) Fine Chemistry and Engineering Department -- specialism in Materials and Polymers
-
-------------------------------------------------------------------------
+::: panel-tabset
 
 ## Experience
 
@@ -46,3 +34,45 @@ Prediction of the distribution of macrozoobenthic species in the Seine estuary i
 **2019 (6 MONTHS)** -- BENTHIC TECHNICIAN -- INTERNSHIP -- GEMEL-Normandie -- Luc sur Mer
 
 Evaluation of a stock of bivalves and associated fauna following a scientific reserve creation on the west coast of Cotentin.
+
+## Education
+
+**2019-20** **\|** MSc Ocean Sciences, Coastal Living Resources Exploitation -- Caen University
+
+**2018-19** **\|** BSc Professions of environmental protection & management Ecological restoration & sustainable development - Caen University of Technology
+
+**2004** **\|** Engineer degree -- Rouen National Institute of Applied Sciences (INSA) Fine Chemistry and Engineering Department -- specialism in Materials and Polymers
+
+## Complete Resume
+
+[Download PDF](Manuscripts/calendrier-2022-semestriel-vierge.pdf)
+
+## Travel
+This is just a quick template integrate a map...
+
+```{r, message= FALSE, warning= FALSE, echo= FALSE}
+#load needed libraries
+library(tidyverse)
+library(here)
+library(sf)
+library(leaflet)
+library(readxl)
+
+#read in cities
+cities <- read_excel(here("data", "travel_cities.xlsx"))
+
+#add geometries to cities
+cities <- cities %>% 
+  st_as_sf(coords = c("lon",
+                      "lat"),
+            crs = 4326)
+
+cities %>% 
+  leaflet() %>% 
+  addProviderTiles(providers$Esri.WorldPhysical) %>% 
+  addProviderTiles(providers$Stamen.TonerLabels) %>% 
+  addMarkers(label = cities$city)
+
+
+```
+:::
