--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Amélie Lehuen projects"
 ---
 
-# 
-Title of the PhD ongoing
+# Title of the PhD ongoing
 
 Marine Ecosystem Engineers Long-Term Evolution ModelING in resPOnse to climate change and sediment Transport in Seine EStuary
+
