--- a/Side_projects/NEO_workshop/NEO_workshop.qmd
+++ b/Side_projects/NEO_workshop/NEO_workshop.qmd
@@ -17,7 +17,7 @@ about:
 ::: panel-tabset
 # Description
 
-Study of "Optimal Ecological Niche" species distribution models and inter-SNO (Systèmes National d'Observation) taxonomic and functional distribution: Coupling of hydro-biological data (low-frequency SOMLIT and high-frequency COASTHF) with planktonic (PHYTOBS) and benthic (BENTHOS) species distribution data in coastal ecosystems of mainland France.
+Study of optimal ecological niche species distribution models and inter-SNO (Systèmes National d'Observation) taxonomic and functional distribution: Coupling of hydro-biological data (low-frequency SOMLIT and high-frequency COASTHF) with planktonic (PHYTOBS) and benthic (BENTHOS) species distribution data in coastal ecosystems of mainland France.
 
 # Info
 Mai 2023 (4 days) - Caen
