--- a/Melting_pot/SDM/SDM.qmd
+++ b/Melting_pot/SDM/SDM.qmd
@@ -24,7 +24,7 @@ about:
 
 * Corresponding author : amelie.lehuen@unicaen.fr
 
-[Supplementary data](SDM_Suppl_Data.html)
+<!-- [Supplementary data](SDM_Suppl_Data.html) -->
 
 Species distribution models (SDM) have been a promising field of research in recent decades. The aim of the present study is to define optimal ecological niches and habitat suitability for the population of the bivalve Cerastoderma edule in the Seine estuary. The method involved applying quantile regression to a 20-year biological dataset at the scale of the estuary, paired with a hydro-morpho-sedimentary model data set validated over a longer period (25 years) also at the scale of the estuary, using 100-m mesh cells. Rather than using the usual linear or B-spline equations previously used in quantile regression, this study chose to describe the biological processes involved in defining an optimal ecological niche the bifactorial gaussian equation. A comparison was made between those three different types of equation (linear, B-spline and Gaussian) in four sets of paired environmental factors: daily maximum current speed & inundation time, daily salinity range & temperature, daily salinity range & bathymetry, mud content & bed shear stress. The non-linear quantile regression with a bifactorial Gaussian equation produced the best description of habitat suitability and optimal niches, at the 95th centile and using the biomass (gAFDW/m²). Daily maximum current speed & inundation time and daily salinity range & temperature were the most pertinent SDMs. The optimal ecological niche for C. edule appeared to be lower intertidal marine areas, with temperate and low dynamic waters, settled in muddy sand sediment. Using this technique, the calculation of optimal niches in the Seine estuary was explored over a period of 25 years and analysed in isolated sectors of the Seine estuary ecosystems and can now be applied in different scenarios related to the global warming. We propose several pertinent models, so that different kinds of prediction can now be choose according to the context.
 
