--- a/Melting_pot/Multispecies_Eris/Multispecies_Eris.qmd
+++ b/Melting_pot/Multispecies_Eris/Multispecies_Eris.qmd
@@ -22,7 +22,8 @@ about:
 * Corresponding author : amelie.lehuen@unicaen.fr
 
 [Supplementary data](Multispecies_Eris_Suppl_Data.pdf)
-[Supplementary data Complete](Multispecies_Eris_Suppl_Data.html)
+
+<!-- [Supplementary data Complete](Multispecies_Eris_Suppl_Data.html) -->
 
 
 In order to assess the metabolic rate (as calculated in Brey, 2010) as descriptor to model the influence of macrofauna on sediment erodibility in intertidal areas, this study proposes a first step toward an understanding of bioturbation mechanism at the community level, by integrating the seasonal variability of individual activity. A flume experiment was performed in laboratory to measure two bioturbation parameters: i) the fluff layer quantity created by fauna and easily eroded (at low bed shear stress) and ii) the critical threshold of bed shear stress when mass erosion occurs. The design was focused on two main factors: i) a multispecies composition of the biological sample, with two species together (*Cerastoderma edule* and *Macoma balthica*; *Scrobicularia plana* and *Hediste diversicolor*; *Corophium volutator* and *Peringia ulvae*) at 4 different relative densities ii) three levels of temperatures (representative of winter, spring and summer conditions). Pair-wise species assemblages were chosen on the basis of the shared habitat frequently observed in the field. A 3-fold treatment were made with the same individuals: a measurement of oxygen consumption from the biological sample, followed by a bioturbation phase and an erosion measurement in flume. The measure of oxygen consumption confirmed that theoretical metabolic rate was a good way to evaluate the respiration of fauna, independently of the species. The erosion results showed a high variability, but still indicated that the metabolic rate was an interesting descriptor to evaluate bioturbation effect and the related mediation of sediment erodibility, to integrate the effect of the 2 cohabiting species. The fluff layer was positively linked to the metabolic rate, with all duos together, whereas the relationship between critical mass erosion and metabolic rate was negative, showing a global destabilization mediated by the faunal bioturbation. However, there were significant differences of impact depending on the species considered.
