--- a/Melting_pot/Multispecies_Eris/Multispecies_Eris.qmd
+++ b/Melting_pot/Multispecies_Eris/Multispecies_Eris.qmd
@@ -8,7 +8,6 @@ image: illustration.png
 categories: [Melting Potes] # self-defined categories
 draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 resources:
-  - "Multispecies_Eris_Suppl_Data.pdf"
   - "Multispecies_Eris_Suppl_Data.html"
 
 about:
@@ -21,12 +20,10 @@ about:
 
 * Corresponding author : amelie.lehuen@unicaen.fr
 
-[Supplementary data](Multispecies_Eris_Suppl_Data.pdf)
-
 <!-- [Supplementary data Complete](Multispecies_Eris_Suppl_Data.html) -->
 
 
-In order to assess the metabolic rate (as calculated in Brey, 2010) as descriptor to model the influence of macrofauna on sediment erodibility in intertidal areas, this study proposes a first step toward an understanding of bioturbation mechanism at the community level, by integrating the seasonal variability of individual activity. A flume experiment was performed in laboratory to measure two bioturbation parameters: i) the fluff layer quantity created by fauna and easily eroded (at low bed shear stress) and ii) the critical threshold of bed shear stress when mass erosion occurs. The design was focused on two main factors: i) a multispecies composition of the biological sample, with two species together (*Cerastoderma edule* and *Macoma balthica*; *Scrobicularia plana* and *Hediste diversicolor*; *Corophium volutator* and *Peringia ulvae*) at 4 different relative densities ii) three levels of temperatures (representative of winter, spring and summer conditions). Pair-wise species assemblages were chosen on the basis of the shared habitat frequently observed in the field. A 3-fold treatment were made with the same individuals: a measurement of oxygen consumption from the biological sample, followed by a bioturbation phase and an erosion measurement in flume. The measure of oxygen consumption confirmed that theoretical metabolic rate was a good way to evaluate the respiration of fauna, independently of the species. The erosion results showed a high variability, but still indicated that the metabolic rate was an interesting descriptor to evaluate bioturbation effect and the related mediation of sediment erodibility, to integrate the effect of the 2 cohabiting species. The fluff layer was positively linked to the metabolic rate, with all duos together, whereas the relationship between critical mass erosion and metabolic rate was negative, showing a global destabilization mediated by the faunal bioturbation. However, there were significant differences of impact depending on the species considered.
+Bioturbation in estuarine environments describes all sediment reworking processes implied in sediment transport. However, modelling at large spatial and temporal scales remains a challenge because of the need to consider the fauna at the community level, and because animal behaviour is highly seasonal with non-linear effects of macrofauna functional trait interactions. Bioturbation processes can be linked to the activity of organisms, based on the principle of energy ecology, linking the metabolic rate to the erodibility of a sediment colonised by benthic fauna. This study investigates this postulate by evaluating the erodibility parameters of a sediment subjected to: i) the bioturbation under seasonal temperature variations; ii) the synergistic bioturbation of different species. The experimental design consisted of: i) three temperature levels (winter, spring and summer), ii) three types of species duos (*Cerastoderma edule* and *Macoma balthica*; *Scrobicularia plana* and *Hediste diversicolor*; *Corophium volutator* and *Peringia ulvae*) at 4 different relative densities. Two successive experiments were carried out on the same individuals: measurement of oxygen consumption of fauna then measurement of the erodibility of the colonised sediment in a flume. The oxygen consumption confirmed that the metabolic rate is a good model of the fauna respiration, regardless of species. The erosion results indicated that the metabolic rate in the case of the fluff layer resuspension is an interesting descriptor for 1) the assessment of the bioturbation under variable temperatures and 2) the integration of the two different bioturbator species that could co-occur in the same habitat. In contrast, the effect of bioturbation on the mass sediment erosion threshold cannot be easily modelled by using the metabolic rate and the classification in functional groups is required. Bioturbation models of the fluff layer using metabolic rate is a promising tool for modelling the effects of faunal communities on sediment transport at the scale of an estuary and over the long term, even projected in the context of global warming.
 
 * Keywords
 
