--- a/Melting_pot/SDM/SDM.qmd
+++ b/Melting_pot/SDM/SDM.qmd
@@ -26,9 +26,9 @@ about:
 
 <!-- [Supplementary data](SDM_Suppl_Data.html) -->
 
-Species Distribution Models (SDM) have been a promising field of ecology research in recent decades. The aim of the present study is to define optimal ecological niches and habitat suitability for the population of the bivalve Cerastoderma edule in the Seine estuary. The method involved applying quantile regression to a 20-year biological dataset at the scale of the estuary, paired with a hydro-morpho-sedimentary model data set validated over a longer period (25 years) also at the scale of the estuary, using 100-m mesh cells. This study was carried out to describe biological responses to environmental factors involved in defining an optimal ecological niche, using the bifactorial Gaussian equation involving physical forcings (tidal currents, bed shear stress, etc.) as explanatory factors. A comparison was made between three different types of equation (linear, B-spline and Gaussian) in four sets of paired environmental factors: daily maximum current speed & inundation time, daily salinity range & temperature, daily salinity range & bathymetry, mud content & bed shear stress. The non-linear quantile regression with a bifactorial Gaussian equation produced the best description of habitat suitability and optimal niches, at the 95th centile and using the biomass (gAFDW/m² - Ash Free Dry weight). Daily maximum current speed & inundation time and daily salinity range & temperature were the most pertinent SDMs. The optimal ecological niche for C. edule appeared to be lower intertidal marine areas, with temperate and low dynamic waters, settled in muddy sand sediment of the tidal flats of Seine estuary. Using this technique, the calculation of optimal niches in this ecosystem was explored over a period of 25 years and analysed in isolated sectors and can now be applied in different scenarios related to the global warming. We propose several reliable models, so that different kinds of prediction can now be applied according to the context of future scenarios.
+For several decades now, species distribution models (SDMs) have been a promising area of ecological research. The aim of the present study is to define the optimal ecological niche for the population of the bivalve Cerastoderma edule in order to assess habitat suitability in the Seine estuary. The method involved applying quantile regression to a 20-year biological dataset coupled with a hydro-morpho-sedimentary model data set validated over a 25-year period, using 100-m mesh cells, both at the scale of the estuary. This study was carried out comparing three different types of equation (linear, B-spline and gaussian) with several physical forcings (tidal currents, bed shear stress, etc.) as explanatory factors. On the basis of a preliminary multivariate analysis of the physical descriptors, models were built representing hydrodynamic, morphodynamical and sedimentary features: daily maximum current speed, inundation time and daily salinity range or mud content as a third predictor. The quantile regression with a gaussian equation produced the best description of the optimal niche, at the 97.5th centile and using the biomass (gAFDW/m² - Ash Free Dry Weight). The optimal ecological niche for C. edule appeared to be lower intertidal marine areas, with low current speed, low salinity fluctuation and a sediment bed composed of muddy sand in the Seine estuary. The calculation of suitability index in this ecosystem was explored over a period of 25 years and analysed in isolated sectors and can now be applied in different scenarios related to the global warming. The model using daily maximum current speed, inundation time and daily salinity range was applied to data from the Scheldt basins, to test the reliability of the model, thus demonstrating that the model performs quite well, even though there were some differences of habitat suitability between these estuaries. This approach can allow direct comparisons of SDMs with one single gaussian model and may offer new perspectives to investigate SDMs on a large scale.
 
 * Keywords
 
-Cerastoderma edule, quantile regression, species distribution model, optimum ecological niches, habitat suitability
+Cerastoderma edule, quantile regression, species distribution model, optimum ecological niches, habitat suitability, cockle populations, estuaries
 
