--- a/Melting_pot/Cockle_Erosion/Cockle_erosion.qmd
+++ b/Melting_pot/Cockle_Erosion/Cockle_erosion.qmd
@@ -20,6 +20,7 @@ about:
 * Corresponding author : amelie.lehuen\@unicaen.fr
 
 <!-- [Supplementary data](Cockle_Erosion_Supp_data.html) -->
+Published in Science of the Total Environment, DOI: [10.1016/j.scitotenv.2023.168936] (https://doi.org/10.1016/j.scitotenv.2023.168936)
 
 Modelling the dynamics of an estuary and the evolution of its morphology requires a process-based description not only of the physical processes, but also of the influence of benthic fauna on sediment characteristics at ecosystem scale. A meta-analysis was tested as an approach for modelling the effect of bioturbation exerted by the cockle Cerastoderma edule on sediment erodibility. Six different erosion flume datasets were collected to ensure a broad range of experimental conditions including bed shear stress, population characteristics, and sediment composition. First, a model was built to describe the biogenic fluff layer created by C. edule activity in relation to (i) bioturbation activity using the population metabolic rate [mW.m-2] as a proxy for faunal metabolic energy, and (ii) the silt content [%] of the sediment. Second, different erosion models were compared by testing parameterization steps incorporating both erosion of the fluff layer and/or mass erosion of the sediment bed. Structural differences in the flumes and in the preparation of samples in the six different datasets makes it difficult to propose a single model that satisfactorily simulates all the data and encompasses both types of subsequent erosion, that of the fluff layer and that of the underlying consolidated bed. However, a generic model is proposed for the surficial fluff layer erosion covering a moderate range of bed shear stress (<1 Pa). This study shows that including several datasets covering a wide range of environmental conditions is a key to the robustness of this model, and that new insights can be gained by integrating the complexity of sediment features. We expect that this two-part model can be used in broad contexts in terms of cockle populations, estuarine habitats, and climatic conditions and can combined with various hydro-morpho-sedimentary models that include these biological effects
 
