melting potes papers and everest update

--- a/index.qmd
+++ b/index.qmd
@@ -9,16 +9,15 @@ about:
 
 :::{#hero-heading}
 # Doctor in estuarine ecosystems {.unnumbered .unlisted}
-# MELTING POTES {.unnumbered .unlisted}
-# Marine Ecosystem Engineers Long-Term Evolution ModelING in resPOnse to climate change and sediment Transport in Seine EStuary {.unnumbered .unlisted}
+# EVEREST {.unnumbered .unlisted}
+# EValuation of the ecological functioning of lateral mudflats upstream of Tancarville to guide new ecological restoration projects through a comparative approach to the functional biodiversity of benthic communities {.unnumbered .unlisted}
 :::
 
-An estuary is a particularly complex ecosystem, where physical conditions have a major influence on the habitats found there. Sedimentary and hydrological parameters have a direct impact on the spatial distribution and activity of benthic macrofauna, with sediments acting as food sources, refuges, and breeding grounds. 
+The study of the functioning and dynamics of mudflats, emblematic habitats of estuaries, is at the heart of the Seine-Aval program. The challenges of development and restoration have led to a focus on the estuary sector, where the largest expanses of these environments are found.
 
-The question of defining the spatial and temporal distribution of a species led to the notion of ecological niche, and the construction of Species Distribution Models (SDM). Among the many possible methods for obtaining a SDM, this work proposes an SDM in the form of the 'optimal ecological niche' of Cerastoderma edule, which corresponds to a correlative model based on quantile regression using a bifactorial Gaussian distribution. The quantile approach makes it possible to estimate the impact of an abiotic factor on the biological response without considering limiting factors. The original addition to this model is to use a bifactorial Gaussian basis to incorporate the classic type of biological response and to take account of the extreme values of the predictors, which can alter the biological response. Four pairs of abiotic predictors from among the environmental factors extracted from a 3D hydro-morpho-sedimentary model (salinity, temperature, maximum current, flooding rate, % of fine silt, etc.) are proposed, along with a habitability index to help manage natural areas.
+To complete this knowledge and gain a more global view of mudflat functioning, the EVEREST project will focus on the lateral mudflats upstream of Tancarville. The monitoring of ecological functions at several of the project's proposed sites is a first step towards understanding the factors governing the functioning of mudflats in this sector. The ultimate aim is to understand the factors that can contribute to the success of a restoration operation in this tidal river environment.
 
-As part of a feedback loop, macrozoobenthic species are often ecosystem engineers, physically modulating the environment around them, and more specifically through a series of sediment reworking processes known as bioturbation. A Cerastoderma edule bioturbation model is constructed from six erodimetry data sets taken from the literature, assessing the quantity of sediment reworked as a function of the metabolic rate of the fauna present in the sample and the type of sediment. It is used to model the erosion of this biogenic layer under the various experimental conditions collected. In addition, experimental work has been carried out to quantify the effect of multi-species bioturbation as a function of metabolic rate and temperature. The characterization of the biogenic layer seems to be sufficiently described by the cumulative metabolic rate of all the individuals present, but the influence of these organisms on the erodibility of the constituent layer of the sediment seems to require more differentiation according to the mode of bioturbation. 
+Particular attention will be paid to the Lillebonne site, which recently underwent a restoration operation. The mudflats at Petiville, Le Trait and Oissel will also be investigated to compare their functioning. Benthic communities (macrofauna, micro-phytobenthos) will be characterized and described using functional biodiversity indicators (life trait analysis). Analysis of the environments at each site, and comparisons between sites, will enable us to identify the parameters that explain their specific ecological functioning.
 
-This work was carried out as part of the MELTING POTES project, whose aim is to determine how the effects of community bioturbation can contribute to the long-term evolution of the estuarine sedimentary bed, and thus impact on the optimal ecological niches in the Seine estuary, both in observed periods and for projections based on climate change scenarios.
-
+[Project details](https://www.seine-aval.fr/projet/everest/)
 
